fix: fix server side Topic reply content overflow

--- a/src/routes/Topic/components/TopicReply.scss
+++ b/src/routes/Topic/components/TopicReply.scss
@@ -3,6 +3,11 @@
   background: white;
   margin-bottom: 24px;
   word-break: break-all;
+  :global {
+    .ant-list-item-content {
+      flex: none;
+    }
+  }
 }
 
 .content {
